kubernetes-examples/rails-on-kubernetes/app-deployments.yaml
# RAILS APP DEPLOYMENT
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: demo-rails-app
  labels:
    app: demo-rails-app
    chart: demo-rails-app-0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-rails-app
  template:
    metadata:
      labels:
        app: demo-rails-app
    spec:
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      containers:
        - name: demo-rails-app
          image: "my-rails-app:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /_liveness
              port: http
              initialDelaySeconds: 30
              periodSeconds: 10
              timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /_readiness
              port: http
              initialDelaySeconds: 30
              periodSeconds: 20
              timeoutSeconds: 30        
        #### CLOUD SQL PROXY FOR Google Cloud based hosted DB #####
        # Uncomment below container to add cloud-sql-proxy container ass required by Gcloud 
        # - name: cloudsql-proxy
        #   image: gcr.io/cloudsql-docker/gce-proxy:1.11
        #   command: ["/cloud_sql_proxy",
        #             "-instances==tcp:5432",
        #             "-credential_file=/secrets/cloudsql/credentials.json"]
        #   securityContext:
        #     runAsUser: 2  # non-root user
        #     allowPrivilegeEscalation: false
        #   volumeMounts:
        #     - name: cloudsql-instance-credentials
        #       mountPath: /secrets/cloudsql
        #       readOnly: true
---
# SIDEKIQ DEPLOYMENT
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sidekiq-worker
  labels:
    app: sidekiq-worker
    chart: demo-rails-app-0.1.0
    
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq-worker
      
  template:
    metadata:
      labels:
        app: sidekiq-worker
        
    spec:
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      containers:
        - name: sidekiq-worker
          image: ":latest"
          imagePullPolicy: Always
          command:
          - /bin/sh
          - -c
          - |
            echo "======= STARTING RPUSH ===="
            rpush start -e production
            echo "======= STARTING SIDEKIQ ======="
            sidekiq -C config/sidekiq.yml
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
