kubernetes-examples/rails-on-kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    # in case you have a static global ip assigned, uncomment the below line 
    # kubernetes.io/ingress.global-static-ip-name: demo-static-ip
  labels:
    app: demo-ingress
spec:
  backend:
    serviceName: demo-web-service
    servicePort: 3000
